2019-04-21  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* For markov shuffling method verbose mode: instead of showing k-let counts,
shows before and after counts of individual letters

2019-04-20  Benjamin Jean-Marie Tremblay  <benjmtremblay@gmail.com>

* Initial release